--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -136,7 +136,8 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">OMR8. Does the person work in the service where the child is currently placed?</div>
+                <div class="col-span-1">OMR8. Does the person work in the service where the child is currently placed?
+                </div>
                 <div>
                     <select id="omr8" name="omr8"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1785,8 +1786,8 @@
                     <div class="flex items-center">
                         <input id="ct7a-4" type="radio" value="3" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary
-                            education</label>
+                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-5" type="radio" value="4" name="ct7a"
@@ -1833,8 +1834,8 @@
                     <div class="flex items-center">
                         <input id="ct7b-4" type="radio" value="3" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary
-                            education</label>
+                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-5" type="radio" value="4" name="ct7b"
@@ -2289,9 +2290,6 @@
             <!-- CAREGIVER -->
             <h3 class="text-xl mt-10 mb-2 font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.3. THE PERSON WHO WAS
                 TAKING CARE OF THE CHILD</h3>
-            <small class="block italic text-red-500">This section is to be filled in only if before entering the system,
-                the child was under the care of someone other than the child&#39;s mother or father. Otherwise, skip to
-                Section 4.</small>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>
@@ -2300,9 +2298,9 @@
                 <div class="flex gap-4">
                     <input id="cg0" name="cg0" type="checkbox" value="9"
                         class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
-                    <label for="cg0" class="ms-2 text-sm text-gray-900">Check only if before entering the system, the
-                        child was under the care of someone other than the child's mother or father. Otherwise, skip to
-                        Section 4.</label>
+                    <label for="cg0" class="ms-2 text-sm text-gray-900"> Check only if before entering the system, the
+                        child was under the care of someone other than the child&#39;s mother or father. Otherwise, skip
+                        to Section 4. </label>
                 </div>
             </div>
 
@@ -2458,7 +2456,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">CGAD. At the time of the child's entry into the childcare system, was the
+                <div class="col-span-1">CGAD. At the time of the child&#39;s entry into the childcare system, was the
                     caregiver alive or deceased?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
@@ -5921,7 +5919,7 @@
                 <div>
                     <p class="mb-2">IF MENTAL DISABILITY IS CHECKED IN LK22_2
                     <p>
-                        LK22_2m. According to the certificate, what degree of disability does the child experience?
+                        LK22_2m. According to the certificate, what degree of mental disability does the child have?
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -6440,7 +6438,7 @@
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">10. THE CHILD&#39;S CURRENT EDUCATION</h2>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">
+                <div>
                     EDK0. Is the child enrolled in preschool/school? <small class="my-2 block italic text-red-500">Check
                         1. Yes also for homeschooled children.</small>
                 </div>
@@ -6459,7 +6457,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">
+                <div>
                     EDK1. What type of education is the child admitted in? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -6486,7 +6484,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">
+                <div>
                     EDK2. In what educational cycle is the child enrolled? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
