--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -138,8 +138,8 @@
                 <div>
                     <select id="omr8" name="omr8"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="1">Да</option>
-                        <option value="2">Нет</option>
+                        <option value="1">Yes</option>
+                        <option value="2">No</option>
                     </select>
                 </div>
             </div>
@@ -1900,7 +1900,7 @@
                     <div class="flex items-center">
                         <input id="ct8a-7" type="radio" value="7" name="ct8a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct8a-7" class="ms-2 text-sm text-gray-900">7. Самозанятая</label>
+                        <label for="ct8a-7" class="ms-2 text-sm text-gray-900">7. Самозанятый</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct8a-8" type="radio" value="8" name="ct8a"
@@ -1911,7 +1911,7 @@
                     <div class="flex items-center">
                         <input id="ct8a-9" type="radio" value="9" name="ct8a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct8a-9" class="ms-2 text-sm text-gray-900">9. Безработная</label>
+                        <label for="ct8a-9" class="ms-2 text-sm text-gray-900">9. Безработный</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct8a-10" type="radio" value="10" name="ct8a"
@@ -1927,13 +1927,12 @@
                     <div class="flex items-center">
                         <input id="ct8a-12" type="radio" value="12" name="ct8a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct8a-12" class="ms-2 text-sm text-gray-900">12. Домохозяйка / Забота о домашнем
-                            хозяйстве</label>
+                        <label for="ct8a-12" class="ms-2 text-sm text-gray-900">12. Домохозяин</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct8a-13" type="radio" value="13" name="ct8a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct8a-13" class="ms-2 text-sm text-gray-900">13. Пенсионерка</label>
+                        <label for="ct8a-13" class="ms-2 text-sm text-gray-900">13. Пенсионер</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct8a-14" type="radio" value="14" name="ct8a"
@@ -1999,7 +1998,7 @@
                     <div class="flex items-center">
                         <input id="ct8b-7" type="radio" value="7" name="ct8b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct8b-7" class="ms-2 text-sm text-gray-900">7. Самозанятая</label>
+                        <label for="ct8b-7" class="ms-2 text-sm text-gray-900">7. Самозанятый</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct8b-8" type="radio" value="8" name="ct8b"
@@ -2010,7 +2009,7 @@
                     <div class="flex items-center">
                         <input id="ct8b-9" type="radio" value="9" name="ct8b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct8b-9" class="ms-2 text-sm text-gray-900">9. Безработная</label>
+                        <label for="ct8b-9" class="ms-2 text-sm text-gray-900">9. Безработный</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct8b-10" type="radio" value="10" name="ct8b"
@@ -2026,13 +2025,12 @@
                     <div class="flex items-center">
                         <input id="ct8b-12" type="radio" value="12" name="ct8b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct8b-12" class="ms-2 text-sm text-gray-900">12. Домохозяйка / Забота о домашнем
-                            хозяйстве</label>
+                        <label for="ct8b-12" class="ms-2 text-sm text-gray-900">12. Домохозяин</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct8b-13" type="radio" value="13" name="ct8b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct8b-13" class="ms-2 text-sm text-gray-900">13. Пенсионерка</label>
+                        <label for="ct8b-13" class="ms-2 text-sm text-gray-900">13. Пенсионер</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct8b-14" type="radio" value="14" name="ct8b"
@@ -2293,9 +2291,6 @@
             <!-- CAREGIVER -->
             <h3 class="text-xl mt-10 mb-2 font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.3. ЛИЦО, КОТОРОЕ
                 ЗАБОТИЛОСЬ О РЕБЕНКЕ</h3>
-            <small class="block italic text-red-500">Этот раздел заполняется только в том случае, если до поступления в
-                систему ребенок находился под опекой кого-либо, кроме матери или отца ребенка. В ином случае перейдите к
-                разделу 4.</small>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>
@@ -2304,9 +2299,9 @@
                 <div class="flex gap-4">
                     <input id="cg0" name="cg0" type="checkbox" value="9"
                         class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
-                    <label for="cg0" class="ms-2 text-sm text-gray-900">Check only if before entering the system, the
-                        child was under the care of someone other than the child's mother or father. Otherwise, skip to
-                        Section 4.</label>
+                    <label for="cg0" class="ms-2 text-sm text-gray-900"> Check only if before entering the system, the
+                        child was under the care of someone other than the child&#39;s mother or father. Otherwise, skip
+                        to Section 4. </label>
                 </div>
             </div>
 
@@ -2461,18 +2456,18 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">CGAD. At the time of the child's entry into the childcare system, was the
-                    caregiver alive or deceased?</div>
+                <div class="col-span-1">CGAD. На момент помещения ребенка в систему альтернативной опеки был ли опекун
+                    жив или умер? Жив(а) Умер(ла)</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="cgad-1" type="radio" value="1" name="cgad"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cgad-1" class="ms-2 text-sm text-gray-900">1. Alive</label>
+                        <label for="cgad-1" class="ms-2 text-sm text-gray-900">1. Живой</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cgad-2" type="radio" value="0" name="cgad"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cgad-2" class="ms-2 text-sm text-gray-900">2. Deceased</label>
+                        <label for="cgad-2" class="ms-2 text-sm text-gray-900">2. Cкончался</label>
                     </div>
                 </div>
             </div>
@@ -2593,7 +2588,7 @@
                     <div class="flex items-center">
                         <input id="cg5b-90" type="radio" value="90" name="cg5b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg5b-90" class="ms-2 text-sm text-gray-900">90. Deceased</label>
+                        <label for="cg5b-90" class="ms-2 text-sm text-gray-900">90. Cкончался</label>
                     </div>
                 </div>
             </div>
@@ -2882,7 +2877,7 @@
                     <div class="flex items-center">
                         <input id="cg8a-14" type="radio" value="14" name="cg8a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg8a-14" class="ms-2 text-sm text-gray-900">14. в декретном отпуске /в отцовском
+                        <label for="cg8a-14" class="ms-2 text-sm text-gray-900">14. В декретном отпуске /в отцовском
                             отпуске</label>
                     </div>
                     <div class="flex items-center">
@@ -2909,7 +2904,7 @@
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
-                    CG8b. Текущая трудовая занятостьопекуна </div>
+                    CG8b. Текущая трудовая занятость опекуна </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="cg8b-1" type="radio" value="1" name="cg8b"
@@ -2983,7 +2978,7 @@
                     <div class="flex items-center">
                         <input id="cg8b-14" type="radio" value="14" name="cg8b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg8b-14" class="ms-2 text-sm text-gray-900">14. в декретном отпуске /в отцовском
+                        <label for="cg8b-14" class="ms-2 text-sm text-gray-900">14. В декретном отпуске /в отцовском
                             отпуске</label>
                     </div>
                     <div class="flex items-center">
@@ -4307,7 +4302,7 @@
                     <div class="flex items-center">
                         <input id="qhouse1-9" type="radio" value="9" name="qhouse1"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="qhouse1-9" class="ms-2 text-sm text-gray-900">9. Не известно</label>
+                        <label for="qhouse1-9" class="ms-2 text-sm text-gray-900">9. Неизвестно</label>
                     </div>
                 </div>
             </div>
@@ -4340,7 +4335,7 @@
                     <div class="flex items-center">
                         <input id="qhouse2-9" type="radio" value="9" name="qhouse2"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="qhouse2-9" class="ms-2 text-sm text-gray-900">9. Не известно</label>
+                        <label for="qhouse2-9" class="ms-2 text-sm text-gray-900">9. Неизвестно</label>
                     </div>
                 </div>
             </div>
@@ -4853,7 +4848,7 @@
                     <div class="flex items-center">
                         <input id="qinc2_dk" type="checkbox" name="qinc2_dk" value="9"
                             class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
-                        <label for="qinc2_dk" class="ms-2 text-sm text-gray-900">9. Не известно</label>
+                        <label for="qinc2_dk" class="ms-2 text-sm text-gray-900">9. Неизвестно</label>
                     </div>
                     <div class="flex items-center gap-4">
                         <input type="text" id="qinc2_sum" name="qinc2_sum"
@@ -5661,7 +5656,7 @@
             <input type="hidden" id="sh5s" name="sh5s" />
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>SH5. Текущей услуги согласно соответствующему Реестру</div>
+                <div>SH5. Уникальный код текущей услуги согласно соответствующему Реестру.</div>
                 <div class="flex gap-4">
                     <select id="sh5" name="sh5"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -6448,7 +6443,7 @@
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">10. ТЕКУЩЕЕ ОБРАЗОВАНИЕ РЕБЕНКА</h2>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">
+                <div>
                     EDK0. Зачислен ли ребенок в детский сад/школу? <small
                         class="my-2 block italic text-red-500">Проверить 1. Да, также для детей, обучающихся на
                         дому.</small>
@@ -6468,7 +6463,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">
+                <div>
                     EDK1. На какой вид образования принят ребенок? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -6495,7 +6490,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">
+                <div>
                     EDK2. На какой образовательный цикл зачислен ребенок? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -6531,8 +6526,8 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
-                    EDK3. В какой класс? <small class="mt-2 block italic text-red-500">Fill in 0 (zero) for preparatory
-                        class</small>
+                    EDK3. В какой класс? <small class="mt-2 block italic text-red-500">ПОСТАВЬТЕ 0 ( НОЛЬ) ДЛЯ
+                        ПОДГОТОВИТЕЛЬНОЙ ГРУППЫ</small>
                 </div>
                 <div class="col-span-1 flex items-center gap-4">
                     <input type="text" id="edk3" name="edk3"
@@ -7355,14 +7350,14 @@
                     <div class="flex items-center">
                         <input id="sq1-2" type="radio" value="1" name="sq1"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sq1-2" class="ms-2 text-sm text-gray-900">1. Они получили часть необходимых им услуг
+                        <label for="sq1-2" class="ms-2 text-sm text-gray-900">1. Он получили часть необходимых им услуг
                             и вмешательств</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sq1-3" type="radio" value="2" name="sq1"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sq1-3" class="ms-2 text-sm text-gray-900">2. Они получили все необходимые им услуги
-                            и вмешательства</label>
+                        <label for="sq1-3" class="ms-2 text-sm text-gray-900">2. Он получили все необходимые им услуги и
+                            вмешательства</label>
                     </div>
                 </div>
             </div>
