--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -143,8 +143,8 @@
                 <div>
                     <select id="omr8" name="omr8"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="1">Ha</option>
-                        <option value="2">Yo&#39;q</option>
+                        <option value="1">Yes</option>
+                        <option value="2">No</option>
                     </select>
                 </div>
             </div>
@@ -2334,9 +2334,6 @@
             <!-- CAREGIVER -->
             <h3 class="text-xl mt-10 mb-2 font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.3. BOLANI PARVARISHLAB
                 KELGAN SHAXS</h3>
-            <small class="block italic text-red-500">Ushbu bo&#39;lim, agar bola tizimga qabul qilinishdan oldin,
-                o&#39;z onasi yoki otasi emas, balki boshqa birovning qaramog&#39;ida bo&#39;lgan holatda
-                to&#39;ldirilishi zarur. Aks holda, 4-bo&#39;limga o&#39;ting.</small>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>
@@ -2346,8 +2343,8 @@
                     <input id="cg0" name="cg0" type="checkbox" value="9"
                         class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
                     <label for="cg0" class="ms-2 text-sm text-gray-900"> Check only if before entering the system, the
-                        child was under the care of someone other than the child's mother or father. Otherwise, skip to
-                        Section 4. </label>
+                        child was under the care of someone other than the child&#39;s mother or father. Otherwise, skip
+                        to Section 4. </label>
                 </div>
             </div>
 
@@ -2502,18 +2499,18 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">CGAD. At the time of the child's entry into the childcare system, was the
-                    caregiver alive or deceased?</div>
+                <div class="col-span-1">CGAD. Bola vasiylik tizimiga qabul qilingan vaqtda, vasiy hayotmidi yoki vafot
+                    etganmidi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="cgad-1" type="radio" value="1" name="cgad"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cgad-1" class="ms-2 text-sm text-gray-900">1. Alive</label>
+                        <label for="cgad-1" class="ms-2 text-sm text-gray-900">1. Hayot</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cgad-2" type="radio" value="0" name="cgad"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cgad-2" class="ms-2 text-sm text-gray-900">2. Deceased</label>
+                        <label for="cgad-2" class="ms-2 text-sm text-gray-900">2. Vafot etgan</label>
                     </div>
                 </div>
             </div>
@@ -2638,7 +2635,7 @@
                     <div class="flex items-center">
                         <input id="cg5b-90" type="radio" value="90" name="cg5b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg5b-90" class="ms-2 text-sm text-gray-900">90. Deceased</label>
+                        <label for="cg5b-90" class="ms-2 text-sm text-gray-900">90. Vafot etgan</label>
                     </div>
                 </div>
             </div>
@@ -4187,7 +4184,7 @@
 
                 <div>
                     2b. Bola qaysi sinfda edi? <small class="mb-1 block italic text-red-500">TAYYORLOV GURUHI UCHUN 0 (
-                        NOL) QO'YING</small>
+                        NOL) QO&#39;YING</small>
                 </div>
                 <div>
                     <input type="text" id="qeduc2b" name="qeduc2b"
@@ -5195,7 +5192,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5245,7 +5243,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5295,7 +5294,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5345,7 +5345,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5395,7 +5396,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5445,7 +5447,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5495,7 +5498,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5545,7 +5549,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5595,7 +5600,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5645,7 +5651,8 @@
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5696,7 +5703,8 @@
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="--">--</option>
                                 <option value="11">1. Mehribonlik uyi</option>
-                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                                <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun
+                                    internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
                                 <option value="14">4. SOS Bolalar makhallalari/oilalari</option>
                                 <option value="15">5. Bolalar uyi </option>
@@ -5736,20 +5744,10 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>SH5s. Aholi punkti</div>
-                <div>
-                    <select id="sh5s" name="sh5s"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="-9" class="t_choose">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
-
             <input type="hidden" id="sh5s" name="sh5s" />
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>SH5. Tegishli Ro'yxatga muvofiq joriy xizmat</div>
+                <div>SH5. Tegishli Ro&#39;yxatga muvofiq joriy xizmatning yagona noyob kodi.</div>
                 <div class="flex gap-4">
                     <select id="sh5" name="sh5"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -6550,7 +6548,7 @@
                 DARAJASI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">
+                <div>
                     EDK0. Bola maktabgacha ta&#39;lim muassasasiga qabul qilinganmi? <small
                         class="my-2 block italic text-red-500">Tekshiring 1. Ha, uyda o&#39;qiydigan bolalar uchun
                         ham.</small>
@@ -6570,7 +6568,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">
+                <div>
                     EDK1. Bola qaysi turdagi ta&#39;limga qabul qilindi? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -6597,7 +6595,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">
+                <div>
                     EDK2. Bola qaysi ta&#39;lim tsikliga qabul qilingan? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -6633,8 +6631,8 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
-                    EDK3. Qaysi sinfga? <small class="mt-2 block italic text-red-500">Fill in 0 (zero) for preparatory
-                        class</small>
+                    EDK3. Qaysi sinfga? <small class="mt-2 block italic text-red-500">TAYYORLOV GURUHI UCHUN 0 ( NOL)
+                        QO&#39;YING</small>
                 </div>
                 <div class="col-span-1 flex items-center gap-4">
                     <input type="text" id="edk3" name="edk3"
@@ -7644,7 +7642,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
-                <div> SK3. Bolaning vasiylik h tizimida aka-uka va/yoki opa-singillari mavjudmi? Ha bo&#39;lsa, nechta
+                <div> SK3. Bolaning vasiylik tizimida aka-uka va/yoki opa-singillari mavjudmi? Ha bo&#39;lsa, nechta
                     aka-uka va nechta opa-singil? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -7669,7 +7667,7 @@
                     <div class="flex items-center">
                         <input id="sk3-3" type="radio" value="3" name="sk3"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sk3-3" class="ms-2 text-sm text-gray-900">3. Na aka-uka, na opa-singillari</label>
+                        <label for="sk3-3" class="ms-2 text-sm text-gray-900">3. Ha, aka-uka va opa-singillari</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk3-4" type="radio" value="9" name="sk3"
@@ -7881,7 +7879,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
                     SK11. Bolani farzandlikka olish imkoniyati bo&#39;yicha ish olib borayotgan aniq belgilangan oilasi
-                    (ismlari va manzili ko&#39;rsatilgan) mavjudmi? </div>
+                    (ismlari va manzili) mavjudmi? </div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="sk11-1" type="radio" value="1" name="sk11"
